# hcm-AI-challenge-2024

./: README.md
aic-23-FE/: .gitignore  next.config.js
aic-23-FE/pages/: _app.tsx  index.tsx
aic-23-FE/pages/video/: [...slug].tsx
aic-23-FE/src/constants/: index.ts
aic-23-FE/src/functions/: index.ts
aic-24-BE/: .env  .gitignore  docker-compose.yml  log.txt  main.py  nitzche_clip.py  requirements.txt  sonic.py  sonic_conf_heading.cfg  sonic_heading.py  utils.py
aic-24-BE/data_processing/: extract_sound.py
aic-24-FE/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
aic-24-FE/hooks/: image.ts
aic-24-FE/pages/: _app.tsx  index.tsx
aic-24-FE/public/: mapping_utube.json
aic-24-FE/styles/: global.ts
aic-24-FE/ui/: GeminiComponent.tsx  ModalFail.tsx  ModalLoading.tsx  ModalSubmitKIS.tsx  ModalSubmitQA.tsx  ModalSuccess.tsx
aic23/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nitzche_clip.py  plato.py  plato_32.py  pyproject.toml  requirements.txt  sonic.py  sonic_conf.cfg  utils.py
aic23/data_processing/: compress.py  crop_frame.py  extract_clip.py  extract_transcript.py
final-simulator/: package-lock.json  package.json
final-simulator/src/: App.tsx  index.tsx  queries.ts
submit-backend-simulator/: .gitignore  index.js  package-lock.json  package.json
submit-backend-simulator/config/: config.js
submit-backend-simulator/controllers/: users.js
submit-backend-simulator/lib/: database.js
submit-backend-simulator/models/: resultModel.js
submit-backend-simulator/routes/: userRoute.js
(+38 files in other folders)
